--- a/cal1.html
+++ b/cal1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="C:\Users\priya\Desktop\html folder\cal1.css">
+    <link rel="stylesheet" href="html folder\cal1.css">
     <title></title>
 </head>
 <body>
